--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,13 +1,6 @@
 <html>
 	<head>
-		<title>{{ site.name }}</title>
-		<link href="{{ site.baseurl }}/css/bootstrap.css" rel="stylesheet">
-		<link href="{{ site.baseurl }}/css/bootstrap-additional.css" rel="stylesheet">
-		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-		<!--[if lt IE 9]>
-		  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+		{%include head.html%}
 	</head>
 	<body>
 		{{ content }}
